crates/sdk-tests/tests/endpoint/endpoint_with_fundable_hook.stderr
error: #[endpoint]` and `#[fundable_hook]` can't co-exist.
 --> $DIR/endpoint_with_fundable_hook.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
